--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -59,9 +59,41 @@
                     android:textColor="@color/red"
                     android:textSize="15sp" /> 
                 
+           	</LinearLayout>
+           	
+            
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_layerlist"
+                android:gravity="center"
+                android:orientation="horizontal" >
                 
+                <TextView
+                    android:id="@+id/tourreport_geologysituation_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="2"
+                    android:text="@string/title_setting_geologysituation"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+                
+               <!--  地层情况 -->
+               <TextView
+                    android:id="@+id/tourreport_geologysituation_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="4"
+                    android:textColor="@color/red"
+                    android:textSize="15sp" /> 
                 
            	</LinearLayout>
+            
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
