--- a/res/layout/activity_workcontent_list.xml
+++ b/res/layout/activity_workcontent_list.xml
@@ -40,7 +40,7 @@
         layout="@layout/common_bottommenu" />
 
 
-    <ListView
+    <com.dreaming.drilling.listview.XListView
         android:id="@+id/workcontent_list"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
@@ -48,6 +48,6 @@
         android:layout_marginBottom="45dp"
         android:cacheColorHint="#00000000"
         android:scrollbars="none" >
-    </ListView>
+    </com.dreaming.drilling.listview.XListView>
 
 </RelativeLayout>
