--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -94,6 +94,7 @@
                 
            	</LinearLayout>
             
+            <!-- 钻孔 -->
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
@@ -123,11 +124,45 @@
                     android:layout_weight="4"
                     android:textColor="@color/red"
                     android:textSize="15sp" />
-
+                
+                <!-- 钻机编号 -->
+				<!-- 
                 <TextView
                     android:id="@+id/tourreport_rigmachine_number_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/tourreport_rigmachine_title"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+
+                <TextView
+                    android:id="@+id/tourreport_rigmachine_number_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="1dp"
+                    android:layout_weight="5"
+                    android:textColor="@color/red"
+                    android:textSize="15sp" />
+                     -->
+            </LinearLayout>
+
+            <!-- 钻机 -->
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_layerlist"
+                android:gravity="center"
+                android:orientation="horizontal" >
+            
+            	<TextView
+                    android:id="@+id/tourreport_rigmachine_number_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="2"
                     android:text="@string/tourreport_rigmachine_title"
                     android:textColor="@color/black"
@@ -140,11 +175,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="1dp"
-                    android:layout_weight="5"
+                    android:layout_weight="4"
                     android:textColor="@color/red"
                     android:textSize="15sp" />
             </LinearLayout>
-
+            
+            
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
